--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: "Доктор Стафий"
 description: "Эндокринолог и нутрициолог Стафий Диана Викторовна"
 baseurl: ""
 url: "https://doctorstafiy.ru"
-theme: jekyll-serif-theme
+remote_theme: https://github.com/zerostaticthemes/jekyll-serif-theme
 plugins:
   - jekyll-seo-tag
+  - jekyll-remote-theme
