--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: "Доктор Стафий"
 description: "Эндокринолог и нутрициолог Стафий Диана Викторовна"
 baseurl: ""
 url: "https://doctorstafiy.ru"
-# remote_theme: https://github.com/zerostaticthemes/jekyll-serif-theme #
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: https://github.com/zerostaticthemes/jekyll-serif-theme #
+# remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-seo-tag
   - jekyll-remote-theme
