Update reviews in reviews.yml

--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -1,9 +1,11 @@
-- name: "Кожухова Марина Валерьевна"
-  date: "18 сентября 2025"
-  review: "Отличный специалист! Все грамотно, понятно и подробно объяснила."
-- name: "Бугалтер Галина Владимиров"
-  date: "24 июня 2025"
-  review: "Очень внимательная, подход индивидуальный, профессионал."
-- name: "Новичкова Лилия"
-  date: "13 декабря 2024"
-  review: "Очень довольна приемом эндокринолога Стафий Дианы Викторовны."
+- name: "Марина"
+  date: "2025"
+  review: "Очень грамотный врач. Всё подробно объяснила, назначила лечение, которое действительно помогло."
+
+- name: "Галина"
+  date: "2025"
+  review: "Внимательный и профессиональный специалист. Приём прошёл спокойно и информативно."
+
+- name: "Лилия"
+  date: "2024"
+  review: "Обратилась с проблемами щитовидной железы. Осталась очень довольна подходом и результатом."
