--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: doctor.stafij@gmail.com
 description: >-
   Эндокринолог-нутрициолог Стафий Диана Викторовна. 
   Специалист по коррекции гормонального фона и питания.
-baseurl: "https://gosubv.github.io/doctorstafij/" 
+baseurl: "doctorstafij/" 
 url: "https://gosubv.github.io/doctorstafij/"
 
 # Навигация
