--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Доктор Стафий
 email: doctor.stafij@gmail.com
-description: >-
-  Эндокринолог-нутрициолог Стафий Диана Викторовна. 
-  Специалист по коррекции гормонального фона и питания.
+description: Эндокринолог-нутрициолог Стафий Диана Викторовна. Специалист по коррекции гормонального фона и питания.
 baseurl: "doctorstafij/" 
 url: "https://gosubv.github.io/doctorstafij/"
 
