--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ navigation:
 instagram_username: dianastafiy
 instagram_url: "https://www.instagram.com/dianastafiy/"
 
-theme: minima
+remote_theme: "jekyll/minima@1e8a445"
