--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Доктор Стафий | Эндокринолог-нутрициолог в Петропавловске
+title: Доктор Стафий | Эндокринолог-нутрициолог
 email: doctor.stafij@gmail.com
-description: "Прием эндокринолога и нутрициолога Стафий Дианы Викторовны. Консультации по гормональному здоровью и питанию в Петропавловске и онлайн."
+description: "Стафий Диана Викторовна — врач эндокринолог, нутрициолог в Петропавловске. Системный подход к гормональному здоровью и питанию."
 baseurl: "/doctorstafij"
 url: "https://gosubv.github.io"
 
@@ -8,11 +8,13 @@ author:
   name: "Стафий Диана Викторовна"
   instagram: "dianastafiy"
   address: "г. Петропавловск, ул. Ауэзова 133"
+  phone: "+7 (7152) 50-00-00" # Замените на актуальный
 
-# Навигация
 navigation:
   - { title: "Главная", link: "/" }
   - { title: "О враче", link: "/about/" }
-  - { title: "Услуги", link: "/#services" }
   - { title: "Отзывы", link: "/#reviews" }
-  - { title: "Записаться", link: "/booking/", class: "btn-nav" }
+  - { title: "Запись", link: "/booking/" }
+
+markdown: kramdown
+# theme: minima # Или оставить пустым при кастомной верстке
