--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   name: "Стафий Диана Викторовна"
   instagram: "dianastafiy"
   address: "г. Петропавловск, ул. Ауэзова 133"
-  phone: "+7 (7152) 50-00-00" # Замените на актуальный
+  phone: "+7 (707) 850-0312" # Замените на актуальный
 
 navigation:
   - { title: "Главная", link: "/" }
