--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -1,7 +1,24 @@
-- name: "Айгуль"
-  text: "Очень внимательный врач, Диана Викторовна объяснила всё доступным языком."
+- name: "Александра К."
+  date: "12.11.2023"
+  text: "Диана Викторовна — очень грамотный специалист. Пришла к ней с проблемой щитовидной железы. Она всё подробно объяснила, назначила только нужные анализы. Чувствую себя намного лучше!"
+  rating: 5
+- name: "Марат С."
+  date: "05.10.2023"
+  text: "Был на приеме как у нутрициолога. Получил четкий план питания и список витаминов. Понравился системный подход, без лишних назначений фуфломицинов."
+  rating: 5
+- name: "Елена"
+  date: "20.09.2023"
+  text: "Лучший эндокринолог в Петропавловске! Очень тактичная, вежливая и современная. Приятно ходить к врачу, который постоянно учится и знает новые протоколы."
+  rating: 5
+- name: "Индира Б."
+  date: "15.08.2023"
+  text: "Помогла мне наладить гормональный фон после родов. Очень благодарна за внимательность и поддержку на каждом этапе лечения."
   rating: 5
 - name: "Сергей"
-  text: "Помогла наладить гормональный фон. Рекомендую как эндокринолога."
+  date: "01.07.2023"
+  text: "Профессионал своего дела. Четко, по существу, профессионально. Рекомендую всем, кто ищет доказательного врача."
   rating: 5
-# Добавьте остальные 8 отзывов аналогично
+- name: "Татьяна"
+  date: "12.06.2023"
+  text: "Очень комфортный прием. Диана Викторовна не просто смотрит в анализы, она слушает пациента. Нашла причину моей вечной усталости."
+  rating: 5
