--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -1,12 +1,12 @@
 - title: "Теперь в собственном кабинете"
   date: "2025-12-24"
   link: "https://www.instagram.com/p/DSobTa9D4U1/"
-  category: "Новый год без тяжесьти и похмелья"
-- title: "Почему витамин D не усваивается?"
+  category: "Новости"
+- title: "Новый год без тяжесьти и похмелья"
   date: "2025-12-21"
   link: "https://www.instagram.com/p/DSguVZ0DMLf/?img_index=1"
-  category: "Нутрициология"
+  category: "Здоровье"
 - title: "В режиме обучения"
   date: "2025-12-18"
   link: "https://www.instagram.com/p/DSZA49CFDHO/"
-  category: "Здоровье"
+  category: "Обучение"
