--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ author:
   name: "Стафий Диана Викторовна"
   instagram_url: "https://www.instagram.com/dianastafiy/"
   instagram_handle: "@dianastafiy"
-  address: "г. Петропавловск, ул. Ауэзова 133 (Мания Рук)"
+  address: "г. Петропавловск, ул. Ауэзова 133 (Магия Рук)"
   phone: "+7 (707) 850-0312"
