--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -1,10 +1,20 @@
-- title: "Диплом врача"
-  image: "assets/img/certs/diplom-1.jpg"
-- title: "Специализация: Эндокринология"
-  image: "assets/img/certs/diplom-2.jpg"
-- title: "Сертификат: Нутрициология"
-  image: "assets/img/certs/cert-1.jpg"
-- title: "Повышение квалификации"
-  image: "assets/img/certs/cert-2.jpg"
-- title: "Участник международной конференции"
-  image: "assets/img/certs/cert-3.jpg"
+- title: "Диплом"
+  image: "assets/img/certs/diplom_01.jpg"
+- title: "Эндокринология"
+  image: "assets/img/certs/diplom_02.jpg"
+- title: "Нутрициология"
+  image: "assets/img/certs/diplom_03.jpg"
+- title: "Допуск врача к клинической практике"
+  image: "assets/img/certs/license_01.png"
+- title: "Эндокринология взрослая"
+  image: "assets/img/certs/certificate_01.jpg"
+- title: "Доклад на международной конференции"
+  image: "assets/img/certs/certificate_02.jpg"
+- title: "Алмаатинская школа эндокринологов"
+  image: "assets/img/certs/certificate_03.jpg"
+- title: "Гастроэнтерология без границ"
+  image: "assets/img/certs/certificate_04.jpg"
+- title: "Проблемы сахарного диабета"
+  image: "assets/img/certs/certificate_05.jpg"
+- title: "Современная эндокринология и гинекология"
+  image: "assets/img/certs/certificate_06.jpg"
