--- a/_data/specializations.yml
+++ b/_data/specializations.yml
@@ -1,3 +1,18 @@
-- icon: "🦋"
-  title: "Щитовидная железа"
+- title: "Щитовидная железа"
+  icon: "🦋"
   text: "Лечение гипотиреоза, АИТ, тиреотоксикоза, а также диагностика узловых изменений структуры железы."
+- title: "Диабетология"
+  icon: "🩸"
+  text: "Ведение диабета 1 и 2 типов, коррекция инсулинорезистентности и профилактика осложнений."
+- title: "Метаболизм и Вес"
+  icon: "⚖️"
+  text: "Лечение ожирения и метаболического синдрома через выявление гормональных причин и нутрициологию."
+- title: "Эндокринология и ГСД"
+  icon: "🤰"
+  text: "Консультирование и ведение пациенток на всех сроках беременности, работа с гормональным фоном."
+- title: "Нутрициология"
+  icon: "🧬"
+  text: "Восполнение дефицитных состояний, работа с витаминами и минералами, лечение остеопороза."
+- title: "Сложные патологии"
+  icon: "🧠"
+  text: "Заболевания гипофиза, пролактиномы и другие редкие нарушения эндокринной системы."
