--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -2,7 +2,7 @@
   date: "2025-12-24"
   link: "https://www.instagram.com/p/DSobTa9D4U1/"
   category: "Новости"
-- title: "Новый год без тяжесьти и похмелья"
+- title: "Новый год без тяжести и похмелья"
   date: "2025-12-21"
   link: "https://www.instagram.com/p/DSguVZ0DMLf/?img_index=1"
   category: "Здоровье"
