--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -18,3 +18,7 @@
   image: "assets/img/certs/certificate_05.jpg"
 - title: "Современная эндокринология и гинекология"
   image: "assets/img/certs/certificate_06.jpg"
+- title: "Управление весом"
+  image: "assets/img/certs/certificate_07.png"
+- title: "Остеопороз в мегаполисе"
+  image: "assets/img/certs/certificate_08.jpg"
