--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -7,7 +7,7 @@
 - title: "Допуск врача к клинической практике"
   image: "assets/img/certs/license_01.png"
 - title: "Эндокринология взрослая"
-  image: "assets/img/certs/certificate_01.jpg"
+  image: "assets/img/certs/certificate_01.png"
 - title: "Доклад на международной конференции"
   image: "assets/img/certs/certificate_02.jpg"
 - title: "Алмаатинская школа эндокринологов"
