Optimize css and html

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Доктор Стафий | Эндокринолог-нутрициоло
 email: doctor.stafij@gmail.com
 description: "Стафий Диана Викторовна — врач эндокринолог, нутрициолог в Петропавловске. Системный подход к гормональному здоровью и питанию."
 baseurl: "/doctorstafij"
-url: "https://gosubv.github.io"
+# url: "https://gosubv.github.io"
+url: "https://localhost:4000"
 
 author:
   name: "Стафий Диана Викторовна"
@@ -10,3 +11,7 @@ author:
   instagram_handle: "@dianastafiy"
   address: "г. Петропавловск, ул. Ауэзова 133 (Магия Рук)"
   phone: "+7 (707) 850-0312"
+
+exclude:
+  - .vscode/
+  - .github/
