--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Доктор Стафий | Эндокринолог-нутрициолог
 email: doctor.stafij@gmail.com
 description: "Стафий Диана Викторовна — врач эндокринолог, нутрициолог в Петропавловске. Системный подход к гормональному здоровью и питанию."
-baseurl: "/doctorstafij"
+baseurl: "/"
 url: "https://gosubv.github.io"
 
 author:
