--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,9 +1,15 @@
 - title: "Эндокринолог"
   text: "Первичная консультация, осмотр, план диагностики."
   price: "10 000 ₸"
+- title: "Эндокринолог Онлайн"
+  text: "Онлайн консультация. Первичная консультация, осмотр, план диагностики."
+  price: "8 000 ₸"
 - title: "Повторный прием эндокринолога"
-  text: "Коррекция терапии по результатам анализов."
-  price: "7 000 ₸"
+  text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
+  price: "8 000 ₸"
 - title: "Нутрициолог"
   text: "Разбор рациона, восполнение дефицитов витаминов."
   price: "15 000 ₸"
+- title: "Повторный прием нутрициолога"
+  text: "В течении 1 месяца после первичного приема. Разбор рациона, восполнение дефицитов витаминов."
+  price: "12 000 ₸"
