New information and text correction.

--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -1,5 +1,9 @@
+- title: "Сауна - это не только отдых"
+  date: "2026-01-06"
+  link: "https://www.instagram.com/dianastafiy/reel/DTKUsRbDGxx/"
+  category: "Здоровье"
 - title: "Теперь в собственном кабинете"
-  date: "2025-12-24"
+  date: "2026-01-06"
   link: "https://www.instagram.com/p/DSobTa9D4U1/"
   category: "Новости"
 - title: "Новый год без тяжести и похмелья"
