--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,15 +1,15 @@
 - title: "Эндокринолог"
-  text: "Первичная консультация, осмотр, план диагностики."
+  text: "Первичная консультация, осмотр, план диагностики и/или лечения."
   price: "10 000 ₸"
 - title: "Эндокринолог Онлайн"
-  text: "Онлайн консультация. Первичная консультация, осмотр, план диагностики."
+  text: "Онлайн консультация. Первичная/повторная консультация, осмотр, план диагностики и/или лечения."
   price: "8 000 ₸"
 - title: "Повторный прием эндокринолога"
   text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
   price: "8 000 ₸"
 - title: "Нутрициолог"
-  text: "Разбор рациона, восполнение дефицитов витаминов."
+  text: "Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАД-ов и схемы сопровождения и динамическое наблюдение."
   price: "15 000 ₸"
 - title: "Повторный прием нутрициолога"
-  text: "В течении 1 месяца после первичного приема. Разбор рациона, восполнение дефицитов витаминов."
+  text: "В течении 1 месяца после первичного приема. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАД-ов и схемы сопровождения и динамическое наблюдение."
   price: "12 000 ₸"
