--- a/_data/specializations.yml
+++ b/_data/specializations.yml
@@ -1,9 +1,9 @@
 - title: "Щитовидная железа"
   icon: "🦋"
-  text: "Лечение гипотиреоза, АИТ, тиреотоксикоза, а также диагностика узловых изменений структуры железы."
+  text: "Лечение гипотиреоза, АИТ, тиреотоксикоза, а также ведение пациентов с узловыми изменениями железы."
 - title: "Диабетология"
   icon: "🩸"
-  text: "Ведение диабета 1 и 2 типов, коррекция инсулинорезистентности и профилактика осложнений."
+  text: "Ведение диабета 1 и 2 типов, коррекция инсулинорезистентности и профилактика осложнений. Диагностика и лечение предиабета."
 - title: "Метаболизм и Вес"
   icon: "⚖️"
   text: "Лечение ожирения и метаболического синдрома через выявление гормональных причин и нутрициологию."
@@ -12,7 +12,7 @@
   text: "Консультирование и ведение пациенток на всех сроках беременности, работа с гормональным фоном."
 - title: "Нутрициология"
   icon: "🧬"
-  text: "Восполнение дефицитных состояний, работа с витаминами и минералами, лечение остеопороза."
-- title: "Сложные патологии"
+  text: "Восполнение дефицитных состояний, работа с витаминами и минералами. Хроническая усталость. Нарушение пищевого поведения. Поддержка здоровья кишечника и микробирты. Индивидуальный план питания (протокол питания). Подбор БАД-ов по показаниям. Сопровождение и динамическое наблюление."
+- title: "Другие эндокринные и гормональные нарушения"
   icon: "🧠"
   text: "Заболевания гипофиза, пролактиномы и другие редкие нарушения эндокринной системы."
