--- a/_data/services.yml
+++ b/_data/services.yml
@@ -8,8 +8,8 @@
   text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
   price: "8 000 ₸"
 - title: "Нутрициолог"
-  text: "Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАД-ов и схемы сопровождения и динамическое наблюдение."
+  text: "Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
   price: "15 000 ₸"
 - title: "Повторный прием нутрициолога"
-  text: "В течении 1 месяца после первичного приема. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАД-ов и схемы сопровождения и динамическое наблюдение."
+  text: "В течении 1 месяца после первичного приема. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
   price: "12 000 ₸"
