--- a/_data/specializations.yml
+++ b/_data/specializations.yml
@@ -12,7 +12,7 @@
   text: "Консультирование и ведение пациенток на всех сроках беременности, работа с гормональным фоном."
 - title: "Нутрициология"
   icon: "🧬"
-  text: "Восполнение дефицитных состояний, работа с витаминами и минералами. Хроническая усталость. Нарушение пищевого поведения. Поддержка здоровья кишечника и микробирты. Индивидуальный план питания (протокол питания). Подбор БАД-ов по показаниям. Сопровождение и динамическое наблюление."
+  text: "Восполнение дефицитных состояний, работа с витаминами и минералами. Хроническая усталость. Нарушение пищевого поведения. Поддержка здоровья кишечника и микробиоты. Индивидуальный план питания (протокол питания). Подбор БАДов по показаниям. Сопровождение и динамическое наблюдение."
 - title: "Другие эндокринные и гормональные нарушения"
   icon: "🧠"
-  text: "Заболевания гипофиза, пролактиномы и другие редкие нарушения эндокринной системы."
+  text: "Заболевания гипофиза, пролактиномы и другие нарушения эндокринной системы."
