--- a/_data/services.yml
+++ b/_data/services.yml
@@ -2,7 +2,7 @@
   text: "Первичная консультация, осмотр, план диагностики и/или лечения."
   price: "10 000 ₸"
 - title: "Эндокринолог Онлайн"
-  text: "Онлайн консультация. Первичная/повторная консультация, осмотр, план диагностики и/или лечения."
+  text: "Онлайн консультация. Первичная/повторная консультация, план диагностики и/или лечения."
   price: "8 000 ₸"
 - title: "Повторный прием эндокринолога"
   text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
