--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -3,15 +3,15 @@
   is_off: true
 - date: "2026-01-13"
   time: "18:00 - 19:30"
-  is_off: false
+  is_off: true
 - date: "2026-01-14"
   time: "13:00 - 14:00"
-  is_off: false
+  is_off: true
 - date: "2026-01-15"
   time: "19:00 - 19:30"
   is_off: false
 - date: "2026-01-16"
-  time: "11:30 - 14:00"
+  time: "12:30 - 14:00"
   is_off: false
 - date: "2026-01-17"
   time: ""
@@ -20,23 +20,44 @@
   time: ""
   is_off: true
 - date: "2026-01-19"
-  time: "11:30 - 14:00"
+  time: "12:30 - 16:00"
   is_off: false
 - date: "2026-01-20"
   time: "17:00 - 19:30"
   is_off: false
 - date: "2026-01-21"
-  time: "11:30 - 14:00"
+  time: "11:30 - 16:00"
   is_off: false
 - date: "2026-01-22"
   time: "17:00 - 19:30"
   is_off: false
 - date: "2026-01-23"
-  time: "11:30 - 14:00"
+  time: "12:30 - 16:00"
   is_off: false
 - date: "2026-01-24"
   time: "12:00 - 16:00"
   is_off: false
 - date: "2026-01-25"
+  time: ""
+  is_off: true
+- date: "2026-01-26"
+  time: "12:30 - 16:00"
+  is_off: false
+- date: "2026-01-27"
+  time: "17:00 - 19:30"
+  is_off: false
+- date: "2026-01-28"
+  time: "12:30 - 16:00"
+  is_off: false
+- date: "2026-01-29"
+  time: "17:00 - 19:30"
+  is_off: false
+- date: "2026-01-30"
+  time: "12:30 - 16:00"
+  is_off: false
+- date: "2026-01-31"
+  time: "12:00 - 16:00"
+  is_off: false
+- date: "2026-02-01"
   time: ""
   is_off: true
