--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,42 +1,84 @@
-- date: "2026-01-19"
-  time: "12:30 - 16:00"
-  is_off: false
-- date: "2026-01-20"
-  time: "17:00 - 19:30"
-  is_off: false
-- date: "2026-01-21"
-  time: "12:30 - 16:00"
-  is_off: false
-- date: "2026-01-22"
-  time: "17:00 - 19:30"
-  is_off: false
-- date: "2026-01-23"
-  time: "12:30 - 16:00"
-  is_off: false
-- date: "2026-01-24"
-  time: "12:00 - 16:00"
-  is_off: false
-- date: "2026-01-25"
-  time: ""
-  is_off: true
 - date: "2026-01-26"
   time: "12:30 - 16:00"
   is_off: false
+  is_online: false
 - date: "2026-01-27"
   time: "17:00 - 19:30"
   is_off: false
+  is_online: false
 - date: "2026-01-28"
   time: "12:30 - 16:00"
   is_off: false
+  is_online: false
 - date: "2026-01-29"
   time: "17:00 - 19:30"
   is_off: false
+  is_online: false
 - date: "2026-01-30"
   time: "12:30 - 16:00"
   is_off: false
+  is_online: false
 - date: "2026-01-31"
   time: "12:00 - 16:00"
   is_off: false
+  is_online: false
 - date: "2026-02-01"
   time: ""
   is_off: true
+  is_online: false
+- date: "2026-02-02"
+  time: "12:30 - 16:00"
+  is_off: false
+  is_online: false
+- date: "2026-02-03"
+  time: "17:00 - 19:30"
+  is_off: false
+  is_online: false
+- date: "2026-02-04"
+  time: "12:30 - 16:00"
+  is_off: false
+  is_online: false
+- date: "2026-02-05"
+  time: "17:00 - 19:30"
+  is_off: false
+  is_online: false
+- date: "2026-02-06"
+  time: "12:30 - 16:00"
+  is_off: true
+  is_online: false
+- date: "2026-02-07"
+  time: "12:00 - 16:00"
+  is_off: true
+  is_online: false
+- date: "2026-02-08"
+  time: ""
+  is_off: true
+  is_online: false
+- date: "2026-02-09"
+  time: "12:30 - 16:00"
+  is_off: true
+  is_online: false
+- date: "2026-02-10"
+  time: "17:00 - 19:30"
+  is_off: false
+  is_online: true
+- date: "2026-02-11"
+  time: "12:30 - 16:00"
+  is_off: false
+  is_online: true
+- date: "2026-02-12"
+  time: "17:00 - 19:30"
+  is_off: false
+  is_online: true
+- date: "2026-02-13"
+  time: "12:30 - 16:00"
+  is_off: false
+  is_online: true
+- date: "2026-02-14"
+  time: "12:00 - 16:00"
+  is_off: true
+  is_online: false
+- date: "2026-02-15"
+  time: ""
+  is_off: true
+  is_online: false
