--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -1,3 +1,19 @@
+- title: "«Раньше всё было вкуснее и натуральнее!» Так ли это?"
+  date: "2026-01-24"
+  link: "https://www.instagram.com/p/DTrZFolDkak/"
+  category: "Здоровье"
+- title: "Моё участие в оздоровительном лагере «Ян Шен»"
+  date: "2026-01-19"
+  link: "https://www.instagram.com/p/DTrZFolDkak/"
+  category: "Здоровье"
+- title: "Новая пирамида питания: Почему она перевернутая?"
+  date: "2026-01-14"
+  link: "https://www.instagram.com/p/DTffaF5DPwz/"
+  category: "Здоровье"
+- title: "Anytime - удобный контроль глюкозы каждый день"
+  date: "2026-01-12"
+  link: "https://www.instagram.com/reel/DTZUbEVjBCy/"
+  category: "Здоровье"
 - title: "Сауна - это не только отдых"
   date: "2026-01-06"
   link: "https://www.instagram.com/dianastafiy/reel/DTKUsRbDGxx/"
