--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -1,6 +1,6 @@
 - title: "«Раньше всё было вкуснее и натуральнее!» Так ли это?"
   date: "2026-01-24"
-  link: "https://www.instagram.com/p/DTrZFolDkak/"
+  link: "https://www.instagram.com/p/DT611bAiONN/"
   category: "Здоровье"
 - title: "Моё участие в оздоровительном лагере «Ян Шен»"
   date: "2026-01-19"
