--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,14 +1,14 @@
 - date: "2026-01-26"
   time: "12:30 - 16:00"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-01-27"
   time: "17:00 - 19:30"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-01-28"
   time: "12:30 - 16:00"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-01-29"
   time: "17:00 - 19:30"
