Change calendar and change services description.

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -7,9 +7,9 @@
 - title: "Повторный прием эндокринолога"
   text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
   price: "8 000 ₸"
-- title: "Нутрициолог"
-  text: "Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
+- title: "Эндокринолог-Нутрициолог"
+  text: "Первичная консультация, осмотр, план диагностики и/или лечения. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
   price: "15 000 ₸"
-- title: "Повторный прием нутрициолога"
-  text: "В течении 1 месяца после первичного приема. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
+- title: "Повторный прием Эндокринолог-Нутрициолог"
+  text: "В течении 1 месяца после первичного приема Эндокринолог-Нутрициолог. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
   price: "12 000 ₸"
