--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,10 +1,10 @@
 - date: "2026-02-02"
   time: "13:00 - 17:00"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-03"
   time: "15:00 - 19:30"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-04"
   time: "13:00 - 17:00"
