Change services description.

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,11 +1,11 @@
 - title: "Эндокринолог"
-  text: "Первичная консультация, осмотр, план диагностики и/или лечения."
+  text: "Первичная консультация, осмотр, план диагностики и/или лечения нарушений гормонального фона (заболевания щитовидной железы, сахарный диабет, пролактинома, заболевания гипофиза)."
   price: "10 000 ₸"
 - title: "Эндокринолог Онлайн"
-  text: "Онлайн консультация. Первичная/повторная консультация, план диагностики и/или лечения."
+  text: "Онлайн консультация. Звонок Whatsapp или по телефону. Первичная консультация, осмотр, план диагностики и/или лечения нарушений гормонального фона (заболевания щитовидной железы, сахарный диабет, пролактинома, заболевания гипофиза)."
   price: "8 000 ₸"
 - title: "Повторный прием эндокринолога"
-  text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов."
+  text: "В течении 1 месяца после первичного приема. Коррекция терапии по результатам анализов. Повторная консультация, осмотр, план диагностики и/или лечения нарушений гормонального фона (заболевания щитовидной железы, сахарный диабет, пролактинома, заболевания гипофиза)."
   price: "8 000 ₸"
 - title: "Эндокринолог-Нутрициолог"
   text: "Первичная консультация, осмотр, план диагностики и/или лечения. Анализ жалоб, образа жизни и питания. Интерпретация лабораторных анализов. Индивидуальные рекомендации по питанию. Коррекция дефицитов нутриентов. Подбор БАДов и схемы сопровождения, динамическое наблюдение."
