--- a/_data/insta_feed.yml
+++ b/_data/insta_feed.yml
@@ -1,3 +1,7 @@
+- title: "Врач лечит болезнь, но вылечить себя можете только вы сами."
+  date: "2026-02-02"
+  link: "https://www.instagram.com/dianastafiy/p/DUM0VlrDCvu/"
+  category: "Здоровье"
 - title: "«Раньше всё было вкуснее и натуральнее!» Так ли это?"
   date: "2026-01-24"
   link: "https://www.instagram.com/p/DT611bAiONN/"
