Change booking slot.

--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,19 +1,19 @@
 
 - date: "2026-02-09"
   time: "13:00 - 17:00"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-10"
   time: "15:00 - 19:30"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-11"
   time: "13:00 - 17:00"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-12"
   time: "15:00 - 19:30"
-  is_off: false
+  is_off: true
   is_online: false
 - date: "2026-02-13"
   time: "13:00 - 17:00"
@@ -52,6 +52,34 @@
   is_off: false
   is_online: false
 - date: "2026-02-22"
+  time: ""
+  is_off: true
+  is_online: false
+- date: "2026-02-23"
+  time: "13:00 - 17:00"
+  is_off: false
+  is_online: false
+- date: "2026-02-24"
+  time: "15:00 - 19:30"
+  is_off: false
+  is_online: false
+- date: "2026-02-25"
+  time: "13:00 - 17:00"
+  is_off: false
+  is_online: false
+- date: "2026-02-26"
+  time: "15:00 - 19:30"
+  is_off: false
+  is_online: false
+- date: "2026-02-27"
+  time: "13:00 - 17:00"
+  is_off: false
+  is_online: false
+- date: "2026-02-28"
+  time: "12:00 - 16:00"
+  is_off: false
+  is_online: false
+- date: "2026-03-01"
   time: ""
   is_off: true
   is_online: false
